fix darkmode text contrast & highlights #38

--- a/assets/sass/_syntax.sass
+++ b/assets/sass/_syntax.sass
@@ -103,7 +103,8 @@ code
   padding: 0
   transition: opacity 0.3s var(--ease)
   &, span
-    color: #666
+    color: hsla(0,0%,100%,0.5)
+    user-select: none
 
 .k, .kc, .kd, .kn, .kp, .kr, .kt, .nt  
   color: #6ab825
