--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -51,6 +51,7 @@ html
   &.page
     --choice-bg: var(--light)
   @mixin darkmode
+    --light: hsla(0,0%,100%,0.87)
     --color-mode: 'dim'
     --text: var(--light)
     --accent: var(--bubble)
